fixing extra margin right for the whole home page

--- a/themes/mffs-theme/sass/_page-templates.scss
+++ b/themes/mffs-theme/sass/_page-templates.scss
@@ -96,6 +96,7 @@ ul {
     @include desktop {
       border-bottom: none;
       margin-left: 4rem;
+      max-width: 26rem;
     }
   }
 }
